# llama-benchmarks

./: .gitignore  Makefile  README.md  conftest.py  environment.sh  pyproject.toml  pytest.ini  ruff.toml
experiments/: 01-mmlu-benchmark.ipynb  20241107-exploring-order-dependency.ipynb  20241107-llama-inference-3.2-3b-text.ipynb  20241107-mmlu-benchmark.ipynb
src/llama_benchmarks/: __init__.py
src/llama_benchmarks/mmlu/: __init__.py  _dataset.py  _llama.py
src/llama_benchmarks/models/: __init__.py  llama.py
src/llama_benchmarks/tools/: __init__.py  _common.py  _concurrent.py  _logging.py  _torch.py
tests/fixtures/: mmlu_fixtures.py
tests/unit/mmlu/: test_dataset.py  test_llama_generator.py  test_mmlu_llama_generator.py
tests/unit/models/: test_llama.py  test_llama_generator.py
