#-------------------------------------------------------------------------------
# Project: llama-benchmarks
#-------------------------------------------------------------------------------

[project]

name = "llama-benchmarks"
dynamic = ["version"]
requires-python = ">=3.12"

dependencies = [
    "blobfile>=3.0.0",
    "fairscale>=0.4.13",
    "ipywidgets>=8.1.5",
    "llama-models>=0.0.49",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "stamina>=24.3.0",
    "torch>=2.5.1",
    "tqdm>=4.67.0",
]

#-------------------------------------------------------------------------------
# Dev Dependencies
#-------------------------------------------------------------------------------

[tool.uv]
dev-dependencies = [
    "python-dotenv>=1.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.7.0",
    "jupyterlab>=4.3.0",
    "jupyterlab-spellchecker>=0.8.4",
]

#-------------------------------------------------------------------------------
# Build System
#-------------------------------------------------------------------------------

[build-system]

requires = ["hatchling"]
build-backend = "hatchling.build"

#-------------------------------------------------------------------------------
# Build Backend
#-------------------------------------------------------------------------------

[tool.hatch.version]

source = "env"
variable = "PY_VERSION"
